tests/negative/unresolved_name.glyph
module neg

fn main() -> number {
  return undeclared_thing
}
